--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script src="/env-config.js"></script> <!-- Incluir script de configuração de ambiente -->
+    <script type="module" defer src="/src/main.tsx"></script> <!-- Adicionar defer -->
   </body>
 </html>
